--- a/code.css
+++ b/code.css
@@ -3860,6 +3860,7 @@ background-image: url(%%monssprites%%);
 width: 30px;
 height: 30px;
 margin: 0px 5px;
+background-position: -4px -5px;
 }
 
 .flair::after, a[href^="#ref-"]{
